fw/core/ddi/tbor/api/tests/compile_tests/fail/invalid_opcode_literal.rs
// Copyright (c) Microsoft Corporation.
// Licensed under the MIT License.
use azihsm_fw_ddi_tbor_api::tbor;
#[tbor(opcode = "hello")]
pub struct BadOpcode { a: u8 }
fn main() {}
